log
lun 20 mar 2023 14:50:52 -03: 
 tests:  0|6
total_score: 0/70
ad9e6db
lun 20 mar 2023 16:05:36 -03: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
af668a5
lun 20 mar 2023 16:11:41 -03: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e9b945
lun 20 mar 2023 16:17:03 -03: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
41afbf2
lun 20 mar 2023 16:20:16 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
83630ca
lun 20 mar 2023 16:24:15 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6b5adfc
lun 20 mar 2023 16:27:38 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1139bd8
lun 20 mar 2023 16:29:03 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d5cb3de
lun 20 mar 2023 16:35:44 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7c1844b
lun 20 mar 2023 16:37:11 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
690109a
lun 20 mar 2023 16:37:40 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
188e33e
lun 20 mar 2023 16:38:11 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
15b14d9
lun 20 mar 2023 16:39:22 -03: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
7287e44
lun 20 mar 2023 16:46:40 -03: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   44 |     int dato = list->head->data;
      |                ^~~~
list.c:45:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   45 |     return dato;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
d19460f
lun 20 mar 2023 16:46:57 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cea801e
lun 20 mar 2023 16:49:53 -03: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
da5977f
lun 20 mar 2023 16:53:55 -03: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
15404f2
lun 20 mar 2023 16:54:17 -03: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c1764e7
lun 20 mar 2023 16:54:37 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
607f1bb
lun 20 mar 2023 16:55:02 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bac1b1f
lun 20 mar 2023 16:55:29 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a38705
lun 20 mar 2023 16:58:46 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5df4a42
lun 20 mar 2023 17:00:26 -03: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
95fd626
lun 20 mar 2023 17:00:54 -03: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
4fa9637
lun 20 mar 2023 17:03:15 -03: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
012cdba
lun 20 mar 2023 17:03:28 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6de90ca
lun 20 mar 2023 17:03:53 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
47d3ad1
lun 20 mar 2023 17:04:06 -03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c3d4a3
